--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   audioplayers: ^0.20.1
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
